# ChangeLog for net-www/lynx
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/lynx/Attic/ChangeLog,v 1.24 2004/01/19 13:14:30 aliz Exp $

  19 Jan 2004; Daniel Ahlberg <aliz@gentoo.org> lynx-2.8.4.1d-r1.ebuild:
  Various updates, removed an old version so that I could remove an old entry
  from packages.mask.

  18 Sep 2003; Jon Portnoy <avenj@gentoo.org> lynx-2.8.4.1d-r1.ebuild :
  ia64 keywords.

*lynx-2.8.4.1d-r1 (04 Jul 2003)

  06 Jul 2003; Guy Martin <gmsoft@gentoo.org> lynx-2.8.4.1d-r1.ebuild :
  Marked stable on hppa.

  04 Jul 2003; Patrick Kursawe <phosphan@gentoo.org> lynx-2.8.4.1d-r1.ebuild:
  fixing bug 23898

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords

 
*lynx-2.8.4.1d (20 Nov 2002)

  16 Jul 2003; Jan Seidel <tuxus@gentoo.org> lynx-2.8.4.1d-r1.ebuild :
  Marked stable on mips

  01 Jun 2003; Joshua Kinard <kumba@gentoo.org> lynx-2.8.4.1d.ebuild:
  Added ~mips to KEYWORDS

  16 Apr 2003; Guy Martin <gmsoft@gentoo.org> lynx-2.8.4.1d.ebuild :
  Marked stable on hppa.

  03 Mar 2003; Aron Griffis <agriffis@gentoo.org> lynx-2.8.4.1d.ebuild:
  Mark stable on alpha

  03 Dec 2002; Will Woods <wwoods@gentoo.org> :
  Added ~alpha to keywords.

  20 Nov 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump

*lynx-2.8.4.1c (26 Aug 2002)

  11 Feb 2003; Guy Martin <gmsoft@gentoo.org> lynx-2.8.4.1c.ebuild :
  Added hppa to keywords.

  14 Sept 2002; Maarten Thibaut <murphy@gentoo.org> lynx-2.8.4.1c.ebuild :
  Added sparc/sparc64 to keywords.
  
  07 Sept 2002; Calum Selkirk <cselkirk@gentoo.org> lynx-2.8.4.1c.ebuild :
  Added ppc to KEYWORDS.

  28 Aug 2002; Seemant Kulleen <seemant@gentoo.org> lynx-2.8.4.1c.ebuild
  lynx-2.8.4a-r4.ebuild :
  PROVIDE=virtual/textbrowser

  26 Aug 2002; Daniel Ahlberg <aliz@gentoo.org> lynx-2.8.4.1c.ebuild :
  Updated to latest patchlevel to fix CRLF injection. More info availabe