@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/lynx/Attic/lynx-2.8.4.1c.ebuild,v 1.10 2003/09/06 01:54:08 msterret Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/lynx/Attic/lynx-2.8.4.1c.ebuild,v 1.11 2004/02/07 19:48:56 iggy Exp $
 
 IUSE="ssl nls ipv6"
 
